# shooker

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  hooker  pyproject.toml  requirements.txt  shooker
docs/: common errors.md  example.md  hooks xml.md
example/: Makefile  hooks.xml  leet_add.c  main.c  target.c  test.c  test.h
internal/: asm.py  cmp.py  cmpl.py  ftb.py  inj.py  other.py  types.py
src/shooker/: __main__.py
src/shooker/internal/: asm.py  cmpl.py  ftb.py  inj.py  other.py
tests/: CMakeLists.txt  create_test.sh  test.sh
tests/001LeetAdd/: CMakeLists.txt  check.c  hooks.xml  victum.c  victum.h
tests/002IncImportFunc/: CMakeLists.txt  check.c  hooks.xml  victum.c  victum.h
tests/003IncLocalFunc/: CMakeLists.txt  check.c  hooks.xml  victum.c  victum.h
